# basic-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
basic_rag/: __init__.py  rag_system.py
basic_rag/chunking/: __init__.py  chunker.py
basic_rag/embedding/: __init__.py  client.py
basic_rag/indexing/: __init__.py  faiss_builder.py
basic_rag/retrieval/: __init__.py  retriever.py
evals/: analyze_chunk_usage.py
evals/multihop_rag/: GUIDE.md  eval_multihop_rag.py  eval_multihop_rag.sh
evals/narrative_qa/: eval_narrative_qa.py  eval_narrative_qa.sh
